<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.MobileAnarchy.Android.Widgets.Joystick.DualJoystickView
        android:id="@+id/dualjoystickView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_UP"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/buttonUP_test"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_dataL"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/dataL_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_LEFT"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="30dp"
                    android:text="@string/buttonLEFT_test"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_RIGHT"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonRIGHT_test"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txt_dataR"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/dataR_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/button_DOWN"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/buttonDOWN_test"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_SET"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_weight="99"
                android:paddingTop="0dp"
                android:text="@string/btnSET_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="99"
                android:text="@string/status_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/button_A"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="10dp"
                    android:text="@string/btnA_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_B"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btnB_text"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/button_C"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/btnC_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_D"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btnD_text"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
